--- a/index.html
+++ b/index.html
@@ -327,14 +327,16 @@
                                 class="absolute left-0 md:left-1/2 md:-translate-x-1/2 w-8 h-8 bg-purple-500 rounded-full border-4 border-navy-900 flex items-center justify-center">
                                 <i data-lucide="briefcase" class="w-4 h-4 text-white"></i>
                             </div>
-                            <span class="text-purple-400 font-semibold">2024</span>
-                            <h3 class="text-xl font-bold text-white mt-1">Stage - [Nom de l'entreprise]</h3>
-                            <p class="text-slate-400 mt-2">Administration réseau et support utilisateur. Mise en place
-                                de solutions de supervision.</p>
+                            <span class="text-purple-400 font-semibold">2026</span>
+                            <h3 class="text-xl font-bold text-white mt-1">Stage - XO XLS Optronic</h3>
+                            <p class="text-slate-400 mt-2">Administration système et téléphonie. Gestion serveurs et
+                                maintenance du parc informatique.</p>
                             <div class="mt-3 flex flex-wrap gap-2">
-                                <span class="text-xs bg-navy-700 text-slate-300 px-2 py-1 rounded">Active
-                                    Directory</span>
-                                <span class="text-xs bg-navy-700 text-slate-300 px-2 py-1 rounded">GLPI</span>
+                                <span class="text-xs bg-navy-700 text-slate-300 px-2 py-1 rounded">VOIP</span>
+                                <span class="text-xs bg-navy-700 text-slate-300 px-2 py-1 rounded">3CX</span>
+                                <span class="text-xs bg-navy-700 text-slate-300 px-2 py-1 rounded">Maintenance</span>
+                                <span class="text-xs bg-navy-700 text-slate-300 px-2 py-1 rounded">Gestion
+                                    Serveur</span>
                             </div>
                         </div>
                     </div>
@@ -421,13 +423,13 @@
                     </div>
                 </div>
 
-                <!-- Réseaux -->
+                <!-- Réseaux & Téléphonie -->
                 <div class="fade-in skill-card bg-navy-800/50 rounded-2xl p-6 border border-slate-700/50">
                     <div class="flex items-center gap-4 mb-6">
                         <div class="w-12 h-12 bg-cyan-500/20 rounded-xl flex items-center justify-center">
                             <i data-lucide="network" class="w-6 h-6 text-cyan-400"></i>
                         </div>
-                        <h3 class="text-xl font-bold text-white">Réseaux</h3>
+                        <h3 class="text-xl font-bold text-white">Réseaux & Téléphonie</h3>
                     </div>
                     <div class="flex flex-wrap gap-2">
                         <span
@@ -445,59 +447,55 @@
                             Tracer</span>
                         <span
                             class="tech-badge bg-cyan-500/20 text-cyan-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-cyan-500/30">Wireshark</span>
+                        <span
+                            class="tech-badge bg-purple-500/20 text-purple-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-purple-500/30">VOIP</span>
+                        <span
+                            class="tech-badge bg-purple-500/20 text-purple-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-purple-500/30">3CX</span>
                     </div>
                 </div>
 
-                <!-- Sécurité -->
+                <!-- Supervision & Monitoring -->
                 <div class="fade-in skill-card bg-navy-800/50 rounded-2xl p-6 border border-slate-700/50">
                     <div class="flex items-center gap-4 mb-6">
-                        <div class="w-12 h-12 bg-red-500/20 rounded-xl flex items-center justify-center">
-                            <i data-lucide="shield" class="w-6 h-6 text-red-400"></i>
+                        <div class="w-12 h-12 bg-orange-500/20 rounded-xl flex items-center justify-center">
+                            <i data-lucide="activity" class="w-6 h-6 text-orange-400"></i>
                         </div>
-                        <h3 class="text-xl font-bold text-white">Sécurité</h3>
+                        <h3 class="text-xl font-bold text-white">Supervision & Monitoring</h3>
                     </div>
                     <div class="flex flex-wrap gap-2">
                         <span
-                            class="tech-badge bg-red-500/20 text-red-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-red-500/30">PfSense</span>
+                            class="tech-badge bg-orange-500/20 text-orange-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-orange-500/30">OXIBOX</span>
                         <span
-                            class="tech-badge bg-red-500/20 text-red-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-red-500/30">Fortinet</span>
-                        <span
-                            class="tech-badge bg-red-500/20 text-red-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-red-500/30">Firewall</span>
-                        <span
-                            class="tech-badge bg-red-500/20 text-red-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-red-500/30">VPN</span>
-                        <span
-                            class="tech-badge bg-orange-500/20 text-orange-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-orange-500/30">Zabbix</span>
+                            class="tech-badge bg-orange-500/20 text-orange-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-orange-500/30">Kiwak</span>
                         <span
                             class="tech-badge bg-orange-500/20 text-orange-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-orange-500/30">Supervision</span>
                         <span
                             class="tech-badge bg-orange-500/20 text-orange-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-orange-500/30">SNMP</span>
+                        <span
+                            class="tech-badge bg-red-500/20 text-red-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-red-500/30">Firewall</span>
+                        <span
+                            class="tech-badge bg-red-500/20 text-red-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-red-500/30">VPN</span>
                     </div>
                 </div>
 
-                <!-- Virtualisation / Cloud -->
+                <!-- Virtualisation -->
                 <div class="fade-in skill-card bg-navy-800/50 rounded-2xl p-6 border border-slate-700/50">
                     <div class="flex items-center gap-4 mb-6">
                         <div class="w-12 h-12 bg-purple-500/20 rounded-xl flex items-center justify-center">
-                            <i data-lucide="cloud" class="w-6 h-6 text-purple-400"></i>
+                            <i data-lucide="hard-drive" class="w-6 h-6 text-purple-400"></i>
                         </div>
-                        <h3 class="text-xl font-bold text-white">Virtualisation / Cloud</h3>
+                        <h3 class="text-xl font-bold text-white">Virtualisation</h3>
                     </div>
                     <div class="flex flex-wrap gap-2">
-                        <span
-                            class="tech-badge bg-purple-500/20 text-purple-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-purple-500/30">VMware
-                            ESXi</span>
                         <span
                             class="tech-badge bg-purple-500/20 text-purple-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-purple-500/30">Proxmox
                             VE</span>
                         <span
                             class="tech-badge bg-purple-500/20 text-purple-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-purple-500/30">VirtualBox</span>
                         <span
-                            class="tech-badge bg-sky-500/20 text-sky-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-sky-500/30">Microsoft
-                            Azure</span>
-                        <span
-                            class="tech-badge bg-amber-500/20 text-amber-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-amber-500/30">AWS</span>
-                        <span
                             class="tech-badge bg-blue-500/20 text-blue-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-blue-500/30">Docker</span>
+                        <span
+                            class="tech-badge bg-slate-500/20 text-slate-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-slate-500/30">Hyper-V</span>
                     </div>
                 </div>
             </div>
