Update: Projets réels (Fulbert, Sport Ludique, Cluedo) + Projets de stage

--- a/index.html
+++ b/index.html
@@ -517,30 +517,25 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Projet 1 -->
                 <div class="fade-in project-card bg-navy-900 rounded-2xl overflow-hidden border border-slate-700/50">
-                    <div class="h-48 bg-gradient-to-br from-blue-600 to-purple-600 flex items-center justify-center">
-                        <i data-lucide="server" class="w-16 h-16 text-white/80"></i>
+                    <div class="h-48 bg-gradient-to-br from-blue-600 to-cyan-600 flex items-center justify-center">
+                        <i data-lucide="network" class="w-16 h-16 text-white/80"></i>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-white mb-2">Infrastructure Active Directory</h3>
+                        <h3 class="text-xl font-bold text-white mb-2">Sport Ludique Chartres</h3>
                         <p class="text-slate-400 text-sm mb-4">
-                            Mise en place d'une infrastructure AD complète avec serveurs DNS, DHCP et GPO pour une PME
-                            fictive.
+                            Projet BTS : Conception et mise en place d'une infrastructure réseau complète, segmentée et
+                            sécurisée pour un complexe sportif.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="text-xs bg-blue-500/20 text-blue-300 px-2 py-1 rounded">Windows Server</span>
-                            <span class="text-xs bg-blue-500/20 text-blue-300 px-2 py-1 rounded">AD</span>
-                            <span class="text-xs bg-purple-500/20 text-purple-300 px-2 py-1 rounded">VMware</span>
+                            <span class="text-xs bg-blue-500/20 text-blue-300 px-2 py-1 rounded">VLAN</span>
+                            <span class="text-xs bg-cyan-500/20 text-cyan-300 px-2 py-1 rounded">Cisco</span>
+                            <span class="text-xs bg-purple-500/20 text-purple-300 px-2 py-1 rounded">Routage</span>
                         </div>
                         <div class="flex gap-3">
-                            <a href="#"
+                            <a href="https://sym-0ne.github.io/sport-ludique-Chartres/" target="_blank"
                                 class="flex-1 text-center bg-accent/10 hover:bg-accent/20 text-accent py-2 rounded-lg text-sm font-medium transition-colors">
-                                <i data-lucide="file-text" class="w-4 h-4 inline mr-1"></i>
-                                Documentation
-                            </a>
-                            <a href="#"
-                                class="flex-1 text-center bg-slate-700/50 hover:bg-slate-600/50 text-slate-300 py-2 rounded-lg text-sm font-medium transition-colors">
                                 <i data-lucide="external-link" class="w-4 h-4 inline mr-1"></i>
-                                Détails
+                                Voir le projet
                             </a>
                         </div>
                     </div>
@@ -548,30 +543,25 @@
 
                 <!-- Projet 2 -->
                 <div class="fade-in project-card bg-navy-900 rounded-2xl overflow-hidden border border-slate-700/50">
-                    <div class="h-48 bg-gradient-to-br from-cyan-600 to-blue-600 flex items-center justify-center">
-                        <i data-lucide="network" class="w-16 h-16 text-white/80"></i>
+                    <div class="h-48 bg-gradient-to-br from-green-600 to-blue-600 flex items-center justify-center">
+                        <i data-lucide="globe" class="w-16 h-16 text-white/80"></i>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-white mb-2">Architecture Réseau Multi-VLAN</h3>
+                        <h3 class="text-xl font-bold text-white mb-2">Site Web : FC Fulbert</h3>
                         <p class="text-slate-400 text-sm mb-4">
-                            Conception et déploiement d'une architecture réseau segmentée avec VLANs, routage inter-VLAN
-                            et ACL.
+                            Projet BTS : Conception et développement d'un site web pour le club de football, optimisé
+                            pour le référencement (SEO).
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="text-xs bg-cyan-500/20 text-cyan-300 px-2 py-1 rounded">Cisco</span>
-                            <span class="text-xs bg-cyan-500/20 text-cyan-300 px-2 py-1 rounded">VLAN</span>
-                            <span class="text-xs bg-cyan-500/20 text-cyan-300 px-2 py-1 rounded">Routage</span>
+                            <span class="text-xs bg-green-500/20 text-green-300 px-2 py-1 rounded">HTML/CSS</span>
+                            <span class="text-xs bg-blue-500/20 text-blue-300 px-2 py-1 rounded">SEO</span>
+                            <span class="text-xs bg-orange-500/20 text-orange-300 px-2 py-1 rounded">GitHub Pages</span>
                         </div>
                         <div class="flex gap-3">
-                            <a href="#"
+                            <a href="https://fc-fulbert-officiel.github.io/FcFulbert/index" target="_blank"
                                 class="flex-1 text-center bg-accent/10 hover:bg-accent/20 text-accent py-2 rounded-lg text-sm font-medium transition-colors">
-                                <i data-lucide="file-text" class="w-4 h-4 inline mr-1"></i>
-                                Documentation
-                            </a>
-                            <a href="#"
-                                class="flex-1 text-center bg-slate-700/50 hover:bg-slate-600/50 text-slate-300 py-2 rounded-lg text-sm font-medium transition-colors">
                                 <i data-lucide="external-link" class="w-4 h-4 inline mr-1"></i>
-                                Détails
+                                Visiter le site
                             </a>
                         </div>
                     </div>
@@ -579,92 +569,68 @@
 
                 <!-- Projet 3 -->
                 <div class="fade-in project-card bg-navy-900 rounded-2xl overflow-hidden border border-slate-700/50">
-                    <div class="h-48 bg-gradient-to-br from-red-600 to-orange-600 flex items-center justify-center">
-                        <i data-lucide="shield" class="w-16 h-16 text-white/80"></i>
+                    <div class="h-48 bg-gradient-to-br from-purple-600 to-pink-600 flex items-center justify-center">
+                        <i data-lucide="code" class="w-16 h-16 text-white/80"></i>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-white mb-2">Sécurisation Périmétrique</h3>
+                        <h3 class="text-xl font-bold text-white mb-2">Jeu en ligne : Cluedo</h3>
                         <p class="text-slate-400 text-sm mb-4">
-                            Déploiement d'un firewall PfSense avec règles de filtrage, VPN site-à-site et portail
-                            captif.
+                            Projet BTS : Développement complet d'un jeu de Cluedo en ligne, intégrant des mécaniques de
+                            jeu et une interface utilisateur dynamique.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="text-xs bg-red-500/20 text-red-300 px-2 py-1 rounded">PfSense</span>
-                            <span class="text-xs bg-red-500/20 text-red-300 px-2 py-1 rounded">VPN</span>
-                            <span class="text-xs bg-red-500/20 text-red-300 px-2 py-1 rounded">Firewall</span>
+                            <span class="text-xs bg-purple-500/20 text-purple-300 px-2 py-1 rounded">JavaScript</span>
+                            <span class="text-xs bg-pink-500/20 text-pink-300 px-2 py-1 rounded">Algorithmie</span>
                         </div>
                         <div class="flex gap-3">
-                            <a href="#"
-                                class="flex-1 text-center bg-accent/10 hover:bg-accent/20 text-accent py-2 rounded-lg text-sm font-medium transition-colors">
-                                <i data-lucide="file-text" class="w-4 h-4 inline mr-1"></i>
-                                Documentation
-                            </a>
-                            <a href="#"
-                                class="flex-1 text-center bg-slate-700/50 hover:bg-slate-600/50 text-slate-300 py-2 rounded-lg text-sm font-medium transition-colors">
-                                <i data-lucide="external-link" class="w-4 h-4 inline mr-1"></i>
-                                Détails
-                            </a>
+                            <span
+                                class="flex-1 text-center bg-slate-800 text-slate-500 py-2 rounded-lg text-sm font-medium">
+                                En développement
+                            </span>
                         </div>
                     </div>
                 </div>
 
                 <!-- Projet 4 -->
                 <div class="fade-in project-card bg-navy-900 rounded-2xl overflow-hidden border border-slate-700/50">
-                    <div class="h-48 bg-gradient-to-br from-orange-600 to-yellow-600 flex items-center justify-center">
-                        <i data-lucide="activity" class="w-16 h-16 text-white/80"></i>
+                    <div class="h-48 bg-gradient-to-br from-orange-600 to-red-600 flex items-center justify-center">
+                        <i data-lucide="phone" class="w-16 h-16 text-white/80"></i>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-white mb-2">Supervision Zabbix</h3>
+                        <h3 class="text-xl font-bold text-white mb-2">Téléphonie IP - Stage XO XLS</h3>
                         <p class="text-slate-400 text-sm mb-4">
-                            Installation et configuration de Zabbix pour la supervision du parc informatique avec
-                            alertes et dashboards.
+                            Mise en place et configuration de solutions de téléphonie IP (VOIP) utilisant 3CX pour
+                            l'entreprise.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="text-xs bg-orange-500/20 text-orange-300 px-2 py-1 rounded">Zabbix</span>
-                            <span class="text-xs bg-green-500/20 text-green-300 px-2 py-1 rounded">Linux</span>
-                            <span class="text-xs bg-orange-500/20 text-orange-300 px-2 py-1 rounded">SNMP</span>
+                            <span class="text-xs bg-orange-500/20 text-orange-300 px-2 py-1 rounded">3CX</span>
+                            <span class="text-xs bg-red-500/20 text-red-300 px-2 py-1 rounded">VOIP</span>
+                            <span class="text-xs bg-blue-500/20 text-blue-300 px-2 py-1 rounded">Réseau</span>
                         </div>
-                        <div class="flex gap-3">
-                            <a href="#"
-                                class="flex-1 text-center bg-accent/10 hover:bg-accent/20 text-accent py-2 rounded-lg text-sm font-medium transition-colors">
-                                <i data-lucide="file-text" class="w-4 h-4 inline mr-1"></i>
-                                Documentation
-                            </a>
-                            <a href="#"
-                                class="flex-1 text-center bg-slate-700/50 hover:bg-slate-600/50 text-slate-300 py-2 rounded-lg text-sm font-medium transition-colors">
-                                <i data-lucide="external-link" class="w-4 h-4 inline mr-1"></i>
-                                Détails
-                            </a>
+                        <div class="p-2 bg-navy-800 rounded-lg text-xs text-slate-500">
+                            Réalisation en milieu professionnel
                         </div>
                     </div>
                 </div>
 
                 <!-- Projet 5 -->
                 <div class="fade-in project-card bg-navy-900 rounded-2xl overflow-hidden border border-slate-700/50">
-                    <div class="h-48 bg-gradient-to-br from-purple-600 to-pink-600 flex items-center justify-center">
-                        <i data-lucide="hard-drive" class="w-16 h-16 text-white/80"></i>
+                    <div class="h-48 bg-gradient-to-br from-indigo-600 to-blue-600 flex items-center justify-center">
+                        <i data-lucide="monitor" class="w-16 h-16 text-white/80"></i>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-white mb-2">Infrastructure Virtualisée</h3>
+                        <h3 class="text-xl font-bold text-white mb-2">Maintenance & Gestion Parc</h3>
                         <p class="text-slate-400 text-sm mb-4">
-                            Création d'un cluster Proxmox VE avec haute disponibilité et migration à chaud des VMs.
+                            Supervision globale du parc informatique via OXIBOX et Kiwak. Gestion des serveurs et
+                            maintenance préventive.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="text-xs bg-purple-500/20 text-purple-300 px-2 py-1 rounded">Proxmox</span>
-                            <span class="text-xs bg-purple-500/20 text-purple-300 px-2 py-1 rounded">HA</span>
-                            <span class="text-xs bg-green-500/20 text-green-300 px-2 py-1 rounded">Debian</span>
+                            <span class="text-xs bg-indigo-500/20 text-indigo-300 px-2 py-1 rounded">OXIBOX</span>
+                            <span class="text-xs bg-orange-500/20 text-orange-400 px-2 py-1 rounded">Kiwak</span>
+                            <span class="text-xs bg-blue-500/20 text-blue-300 px-2 py-1 rounded">Supervision</span>
                         </div>
-                        <div class="flex gap-3">
-                            <a href="#"
-                                class="flex-1 text-center bg-accent/10 hover:bg-accent/20 text-accent py-2 rounded-lg text-sm font-medium transition-colors">
-                                <i data-lucide="file-text" class="w-4 h-4 inline mr-1"></i>
-                                Documentation
-                            </a>
-                            <a href="#"
-                                class="flex-1 text-center bg-slate-700/50 hover:bg-slate-600/50 text-slate-300 py-2 rounded-lg text-sm font-medium transition-colors">
-                                <i data-lucide="external-link" class="w-4 h-4 inline mr-1"></i>
-                                Détails
-                            </a>
+                        <div class="p-2 bg-navy-800 rounded-lg text-xs text-slate-500">
+                            Réalisation en milieu professionnel
                         </div>
                     </div>
                 </div>
