Update: Sport Ludique Orléans, suppression liens morts et ajout compétences (Apache, GLPI, SSL)

--- a/index.html
+++ b/index.html
@@ -417,9 +417,14 @@
                             class="tech-badge bg-green-500/20 text-green-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-green-500/30">Ubuntu
                             Server</span>
                         <span
-                            class="tech-badge bg-slate-500/20 text-slate-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-slate-500/30">PowerShell</span>
+                            class="tech-badge bg-green-500/20 text-green-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-green-500/30">Apache2
+                            / Nginx</span>
                         <span
-                            class="tech-badge bg-slate-500/20 text-slate-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-slate-500/30">Bash</span>
+                            class="tech-badge bg-slate-500/20 text-slate-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-slate-500/30">PowerShell
+                            / Bash</span>
+                        <span
+                            class="tech-badge bg-yellow-500/20 text-yellow-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-yellow-500/30">Cron
+                            / Automation</span>
                     </div>
                 </div>
 
@@ -464,17 +469,20 @@
                     </div>
                     <div class="flex flex-wrap gap-2">
                         <span
-                            class="tech-badge bg-orange-500/20 text-orange-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-orange-500/30">OXIBOX</span>
+                            class="tech-badge bg-orange-500/20 text-orange-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-orange-500/30">OXIBOX
+                            / Kiwak</span>
                         <span
-                            class="tech-badge bg-orange-500/20 text-orange-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-orange-500/30">Kiwak</span>
+                            class="tech-badge bg-orange-500/20 text-orange-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-orange-500/30">Supervision
+                            SNMP</span>
                         <span
-                            class="tech-badge bg-orange-500/20 text-orange-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-orange-500/30">Supervision</span>
+                            class="tech-badge bg-blue-500/20 text-blue-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-blue-500/30">GLPI
+                            / Inventaire</span>
                         <span
-                            class="tech-badge bg-orange-500/20 text-orange-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-orange-500/30">SNMP</span>
+                            class="tech-badge bg-red-500/20 text-red-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-red-500/30">Cyber
+                            : SSL/TLS (Let's Encrypt)</span>
                         <span
-                            class="tech-badge bg-red-500/20 text-red-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-red-500/30">Firewall</span>
-                        <span
-                            class="tech-badge bg-red-500/20 text-red-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-red-500/30">VPN</span>
+                            class="tech-badge bg-red-500/20 text-red-300 px-3 py-1.5 rounded-lg text-sm font-medium border border-red-500/30">Firewall
+                            / VPN</span>
                     </div>
                 </div>
 
@@ -521,10 +529,10 @@
                         <i data-lucide="network" class="w-16 h-16 text-white/80"></i>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-bold text-white mb-2">Sport Ludique Chartres</h3>
+                        <h3 class="text-xl font-bold text-white mb-2">Sport Ludique Orléans</h3>
                         <p class="text-slate-400 text-sm mb-4">
                             Projet BTS : Conception et mise en place d'une infrastructure réseau complète, segmentée et
-                            sécurisée pour un complexe sportif.
+                            sécurisée.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="text-xs bg-blue-500/20 text-blue-300 px-2 py-1 rounded">VLAN</span>
@@ -532,7 +540,7 @@
                             <span class="text-xs bg-purple-500/20 text-purple-300 px-2 py-1 rounded">Routage</span>
                         </div>
                         <div class="flex gap-3">
-                            <a href="https://sym-0ne.github.io/sport-ludique-Chartres/" target="_blank"
+                            <a href="https://xola-max.github.io/gp-orleans-sportludique2025-2026/" target="_blank"
                                 class="flex-1 text-center bg-accent/10 hover:bg-accent/20 text-accent py-2 rounded-lg text-sm font-medium transition-colors">
                                 <i data-lucide="external-link" class="w-4 h-4 inline mr-1"></i>
                                 Voir le projet
@@ -555,14 +563,12 @@
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="text-xs bg-green-500/20 text-green-300 px-2 py-1 rounded">HTML/CSS</span>
                             <span class="text-xs bg-blue-500/20 text-blue-300 px-2 py-1 rounded">SEO</span>
-                            <span class="text-xs bg-orange-500/20 text-orange-300 px-2 py-1 rounded">GitHub Pages</span>
                         </div>
                         <div class="flex gap-3">
-                            <a href="https://fc-fulbert-officiel.github.io/FcFulbert/index" target="_blank"
-                                class="flex-1 text-center bg-accent/10 hover:bg-accent/20 text-accent py-2 rounded-lg text-sm font-medium transition-colors">
-                                <i data-lucide="external-link" class="w-4 h-4 inline mr-1"></i>
-                                Visiter le site
-                            </a>
+                            <span
+                                class="flex-1 text-center bg-slate-800 text-slate-500 py-2 rounded-lg text-sm font-medium">
+                                Lien bientôt disponible
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -575,8 +581,8 @@
                     <div class="p-6">
                         <h3 class="text-xl font-bold text-white mb-2">Jeu en ligne : Cluedo</h3>
                         <p class="text-slate-400 text-sm mb-4">
-                            Projet BTS : Développement complet d'un jeu de Cluedo en ligne, intégrant des mécaniques de
-                            jeu et une interface utilisateur dynamique.
+                            Projet BTS : Développement d'un jeu de Cluedo en ligne, intégrant des mécaniques de jeu et
+                            une interface utilisateur dynamique.
                         </p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="text-xs bg-purple-500/20 text-purple-300 px-2 py-1 rounded">JavaScript</span>
@@ -587,50 +593,6 @@
                                 class="flex-1 text-center bg-slate-800 text-slate-500 py-2 rounded-lg text-sm font-medium">
                                 En développement
                             </span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Projet 4 -->
-                <div class="fade-in project-card bg-navy-900 rounded-2xl overflow-hidden border border-slate-700/50">
-                    <div class="h-48 bg-gradient-to-br from-orange-600 to-red-600 flex items-center justify-center">
-                        <i data-lucide="phone" class="w-16 h-16 text-white/80"></i>
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-bold text-white mb-2">Téléphonie IP - Stage XO XLS</h3>
-                        <p class="text-slate-400 text-sm mb-4">
-                            Mise en place et configuration de solutions de téléphonie IP (VOIP) utilisant 3CX pour
-                            l'entreprise.
-                        </p>
-                        <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="text-xs bg-orange-500/20 text-orange-300 px-2 py-1 rounded">3CX</span>
-                            <span class="text-xs bg-red-500/20 text-red-300 px-2 py-1 rounded">VOIP</span>
-                            <span class="text-xs bg-blue-500/20 text-blue-300 px-2 py-1 rounded">Réseau</span>
-                        </div>
-                        <div class="p-2 bg-navy-800 rounded-lg text-xs text-slate-500">
-                            Réalisation en milieu professionnel
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Projet 5 -->
-                <div class="fade-in project-card bg-navy-900 rounded-2xl overflow-hidden border border-slate-700/50">
-                    <div class="h-48 bg-gradient-to-br from-indigo-600 to-blue-600 flex items-center justify-center">
-                        <i data-lucide="monitor" class="w-16 h-16 text-white/80"></i>
-                    </div>
-                    <div class="p-6">
-                        <h3 class="text-xl font-bold text-white mb-2">Maintenance & Gestion Parc</h3>
-                        <p class="text-slate-400 text-sm mb-4">
-                            Supervision globale du parc informatique via OXIBOX et Kiwak. Gestion des serveurs et
-                            maintenance préventive.
-                        </p>
-                        <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="text-xs bg-indigo-500/20 text-indigo-300 px-2 py-1 rounded">OXIBOX</span>
-                            <span class="text-xs bg-orange-500/20 text-orange-400 px-2 py-1 rounded">Kiwak</span>
-                            <span class="text-xs bg-blue-500/20 text-blue-300 px-2 py-1 rounded">Supervision</span>
-                        </div>
-                        <div class="p-2 bg-navy-800 rounded-lg text-xs text-slate-500">
-                            Réalisation en milieu professionnel
                         </div>
                     </div>
                 </div>
