Update: Stats (5+ ans, 3+ projets, 15+ techs) et texte d'intro affiné

--- a/index.html
+++ b/index.html
@@ -236,9 +236,11 @@
 
                 <!-- Description -->
                 <p class="text-lg text-slate-400 max-w-2xl mx-auto mb-10">
-                    Passionné par les infrastructures réseau, la sécurité informatique et l'administration système.
+                    Futur <span class="text-white font-medium">administrateur système et réseau</span>, je me spécialise
+                    dans la sécurisation des infrastructures et la gestion du parc informatique (<span
+                        class="text-accent font-semibold">SISR</span>).
                     Je recherche une alternance pour intégrer une <span class="text-white font-medium">Licence
-                        Professionnelle</span>.
+                        Professionnelle</span> à la rentrée 2025.
                 </p>
 
                 <!-- CTA Buttons -->
@@ -258,15 +260,15 @@
                 <!-- Stats -->
                 <div class="grid grid-cols-3 gap-8 mt-16 max-w-lg mx-auto">
                     <div class="text-center">
-                        <div class="text-3xl font-bold text-white">2+</div>
+                        <div class="text-3xl font-bold text-white">5+</div>
                         <div class="text-sm text-slate-400">Années de formation</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-3xl font-bold text-white">5+</div>
-                        <div class="text-sm text-slate-400">Projets réalisés</div>
+                        <div class="text-3xl font-bold text-white">3+</div>
+                        <div class="text-sm text-slate-400">Projets majeurs</div>
                     </div>
                     <div class="text-center">
-                        <div class="text-3xl font-bold text-white">10+</div>
+                        <div class="text-3xl font-bold text-white">15+</div>
                         <div class="text-sm text-slate-400">Technologies</div>
                     </div>
                 </div>
